k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: library-backend-service
  namespace: library-devops
spec:
  selector:
    app: library-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP # use LoadBalancer for external access if needed
